syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float FinalPrice = 4;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message Blank {}

service ListOrdersService {
  rpc ListOrders(Blank) returns (ListOrdersResponse);
}